# Nameless-Logger

./: CMakeLists.txt  LICENSE  README.md
include/: Log.hpp
src/: Log.cpp
